# grove

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Grove.bat  LICENSE  README.md  grove-launcher.ps1
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.github/workflows/: build.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md  v2.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-ROADMAP.md  v2.1-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  (+4 more)
docs/: architecture.md  configuration.md  troubleshooting.md  user-guide.md
scripts/: ui-setup.sh  with-modules.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: fetch.rs  lib.rs  notifications.rs  tray.rs
src-tauri/src/commands/: config_commands.rs  file_commands.rs  git_commands.rs  mod.rs  session_commands.rs
src-tauri/src/config/: models.rs  persistence.rs
src-tauri/src/git/: branches.rs  build.rs  changelog.rs  diff.rs  error.rs  merge.rs  mod.rs  pipeline.rs  queue.rs  status.rs  worktree.rs
src-tauri/src/process/: detect.rs  launch.rs  mod.rs
src-tauri/src/terminal/: commands.rs  history.rs  job_object.rs  mod.rs  pty.rs  state_parser.rs
src-tauri/src/utils/: paths.rs
src-tauri/src/watcher/: mod.rs
src-ui/: .npmrc  index.html  package-lock.json  package.json  vite.config.ts
(+348 files in other folders)
