[package]
name = "grove"
version = "0.1.0"
edition = "2021"

[lib]
name = "grove_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
git2 = { version = "0.20", default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-dialog = "2"
notify = "8.2"
notify-debouncer-mini = "0.7"
