[package]
name = "grove"
version = "1.0.0"
edition = "2021"

[lib]
name = "grove_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
git2 = { version = "0.20", default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
sysinfo = "0.38"
notify = "8.2"
notify-debouncer-mini = "0.7"
glob = "0.3"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
